Add missing translations

--- a/apps/mobile/locales/de.json
+++ b/apps/mobile/locales/de.json
@@ -2,6 +2,8 @@
   "common": {
     "cancel": "Abbrechen",
     "save": "Speichern",
+    "saving": "Speichert...",
+    "success": "Erfolg",
     "done": "Fertig",
     "close": "Schließen",
     "ok": "OK",
@@ -12,11 +14,16 @@
     "search": "Suchen",
     "loading": "Lädt...",
     "error": "Fehler",
+    "errorOccurred": "Ein Fehler ist aufgetreten. Bitte versuche es erneut.",
     "retry": "Nochmal versuchen",
     "send": "Senden",
     "back": "Zurück",
     "new": "Neu",
-    "create": "Erstellen"
+    "create": "Erstellen",
+    "continue": "Weiter",
+    "loadMore": "Mehr laden",
+    "previous": "Vorherige",
+    "next": "Nächste"
   },
   "auth": {
     "signIn": "Anmelden",
@@ -649,7 +656,9 @@
     "connecting": "Verbindung wird hergestellt...",
     "disconnect": "Trennen",
     "noAppsFound": "Keine Apps gefunden",
+    "noAppsAvailable": "Keine Apps verfügbar",
     "tryDifferentSearch": "Versuche einen anderen Suchbegriff",
+    "appsAppearHere": "Apps erscheinen hier, sobald verfügbar",
     "loadingIntegrations": "Integrationen werden geladen...",
     "failedToLoad": "Laden fehlgeschlagen",
     "retry": "Erneut versuchen",
@@ -698,7 +707,10 @@
       "loadingTools": "Tools werden geladen...",
       "failedToLoadTools": "Laden fehlgeschlagen",
       "noToolsAvailable": "Keine Tools verfügbar",
+      "noToolsFound": "Keine Tools gefunden",
       "noToolsDescription": "Diese Integration hat keine Tools",
+      "tryAdjustingSearch": "Versuche deine Suche anzupassen",
+      "toolsAppearHere": "Tools erscheinen hier, sobald verfügbar",
       "addingTools": "Tools werden hinzugefügt...",
       "addTool": "{{count}} Tool hinzufügen",
       "addTools": "{{count}} Tools hinzufügen",
