--- a/apps/mobile/locales/es.json
+++ b/apps/mobile/locales/es.json
@@ -2,6 +2,8 @@
   "common": {
     "cancel": "Cancelar",
     "save": "Guardar",
+    "saving": "Guardando...",
+    "success": "Éxito",
     "done": "Listo",
     "close": "Cerrar",
     "ok": "OK",
@@ -12,11 +14,16 @@
     "search": "Buscar",
     "loading": "Cargando...",
     "error": "Error",
+    "errorOccurred": "Ocurrió un error. Por favor, inténtalo de nuevo.",
     "retry": "Reintentar",
     "send": "Enviar",
     "back": "Atrás",
     "new": "Nuevo",
-    "create": "Crear"
+    "create": "Crear",
+    "continue": "Continuar",
+    "loadMore": "Cargar más",
+    "previous": "Anterior",
+    "next": "Siguiente"
   },
   "auth": {
     "signIn": "Iniciar sesión",
@@ -663,7 +670,9 @@
     "connecting": "Conectando...",
     "disconnect": "Desconectar",
     "noAppsFound": "No se encontraron aplicaciones",
+    "noAppsAvailable": "No hay aplicaciones disponibles",
     "tryDifferentSearch": "Prueba un término de búsqueda diferente",
+    "appsAppearHere": "Las aplicaciones aparecerán aquí cuando estén disponibles",
     "loadingIntegrations": "Cargando integraciones...",
     "failedToLoad": "Error al cargar aplicaciones",
     "retry": "Reintentar",
@@ -712,7 +721,10 @@
       "loadingTools": "Cargando herramientas...",
       "failedToLoadTools": "Error al Cargar Herramientas",
       "noToolsAvailable": "No Hay Herramientas Disponibles",
+      "noToolsFound": "No se encontraron herramientas",
       "noToolsDescription": "Esta integración no tiene herramientas para configurar",
+      "tryAdjustingSearch": "Intenta ajustar tu búsqueda",
+      "toolsAppearHere": "Las herramientas aparecerán aquí cuando estén disponibles",
       "addingTools": "Agregando Herramientas...",
       "addTool": "Agregar {{count}} Herramienta",
       "addTools": "Agregar {{count}} Herramientas",
