--- a/apps/mobile/locales/fr.json
+++ b/apps/mobile/locales/fr.json
@@ -2,6 +2,8 @@
   "common": {
     "cancel": "Annuler",
     "save": "Enregistrer",
+    "saving": "Enregistrement...",
+    "success": "Succès",
     "done": "OK",
     "close": "Fermer",
     "ok": "OK",
@@ -12,11 +14,16 @@
     "search": "Rechercher",
     "loading": "Chargement...",
     "error": "Erreur",
+    "errorOccurred": "Une erreur s'est produite. Veuillez réessayer.",
     "retry": "Réessayer",
     "send": "Envoyer",
     "back": "Retour",
     "new": "Nouveau",
-    "create": "Créer"
+    "create": "Créer",
+    "continue": "Continuer",
+    "loadMore": "Charger plus",
+    "previous": "Précédent",
+    "next": "Suivant"
   },
   "auth": {
     "signIn": "Se connecter",
@@ -663,7 +670,9 @@
     "connecting": "Connexion...",
     "disconnect": "Déconnecter",
     "noAppsFound": "Aucune application trouvée",
+    "noAppsAvailable": "Aucune application disponible",
     "tryDifferentSearch": "Essaie un terme de recherche différent",
+    "appsAppearHere": "Les applications apparaîtront ici une fois disponibles",
     "loadingIntegrations": "Chargement des intégrations...",
     "failedToLoad": "Échec du chargement",
     "retry": "Réessayer",
@@ -712,7 +721,10 @@
       "loadingTools": "Chargement des outils...",
       "failedToLoadTools": "Échec du Chargement",
       "noToolsAvailable": "Aucun Outil Disponible",
+      "noToolsFound": "Aucun outil trouvé",
       "noToolsDescription": "Cette intégration n'a pas d'outils",
+      "tryAdjustingSearch": "Essaie d'ajuster ta recherche",
+      "toolsAppearHere": "Les outils apparaîtront ici une fois disponibles",
       "addingTools": "Ajout des Outils...",
       "addTool": "Ajouter {{count}} Outil",
       "addTools": "Ajouter {{count}} Outils",
