--- a/apps/mobile/locales/ja.json
+++ b/apps/mobile/locales/ja.json
@@ -2,6 +2,8 @@
   "common": {
     "cancel": "キャンセル",
     "save": "保存",
+    "saving": "保存中...",
+    "success": "成功",
     "done": "完了",
     "close": "閉じる",
     "ok": "OK",
@@ -12,11 +14,16 @@
     "search": "検索",
     "loading": "読み込み中...",
     "error": "エラー",
+    "errorOccurred": "エラーが発生しました。もう一度お試しください。",
     "retry": "もう一度",
     "send": "送信",
     "back": "戻る",
     "new": "新規",
-    "create": "作成"
+    "create": "作成",
+    "continue": "続ける",
+    "loadMore": "さらに読み込む",
+    "previous": "前へ",
+    "next": "次へ"
   },
   "auth": {
     "signIn": "ログイン",
@@ -642,7 +649,9 @@
     "connecting": "接続中...",
     "disconnect": "切断",
     "noAppsFound": "アプリが見つかりません",
+    "noAppsAvailable": "利用可能なアプリがありません",
     "tryDifferentSearch": "別の検索語を試してください",
+    "appsAppearHere": "アプリは利用可能になるとここに表示されます",
     "loadingIntegrations": "統合を読み込み中...",
     "failedToLoad": "読み込みに失敗しました",
     "retry": "再試行",
@@ -691,7 +700,10 @@
       "loadingTools": "ツールを読み込み中...",
       "failedToLoadTools": "読み込みに失敗",
       "noToolsAvailable": "利用可能なツールはありません",
+      "noToolsFound": "ツールが見つかりません",
       "noToolsDescription": "この統合には設定するツールがありません",
+      "tryAdjustingSearch": "検索条件を調整してみてください",
+      "toolsAppearHere": "ツールは利用可能になるとここに表示されます",
       "addingTools": "ツールを追加中...",
       "addTool": "{{count}}個のツールを追加",
       "addTools": "{{count}}個のツールを追加",
