--- a/apps/mobile/locales/zh.json
+++ b/apps/mobile/locales/zh.json
@@ -2,6 +2,8 @@
   "common": {
     "cancel": "取消",
     "save": "保存",
+    "saving": "保存中...",
+    "success": "成功",
     "done": "完成",
     "close": "关闭",
     "ok": "好的",
@@ -12,11 +14,16 @@
     "search": "搜索",
     "loading": "加载中...",
     "error": "出错了",
+    "errorOccurred": "发生了错误，请重试。",
     "retry": "重试",
     "send": "发送",
     "back": "返回",
     "new": "新建",
-    "create": "创建"
+    "create": "创建",
+    "continue": "继续",
+    "loadMore": "加载更多",
+    "previous": "上一页",
+    "next": "下一页"
   },
   "auth": {
     "signIn": "登录",
@@ -649,7 +656,9 @@
     "connecting": "连接中...",
     "disconnect": "断开连接",
     "noAppsFound": "未找到应用",
+    "noAppsAvailable": "没有可用的应用",
     "tryDifferentSearch": "尝试不同的搜索词",
+    "appsAppearHere": "应用将在可用时显示在此处",
     "loadingIntegrations": "加载集成中...",
     "failedToLoad": "加载失败",
     "retry": "重试",
@@ -698,7 +707,10 @@
       "loadingTools": "加载工具中...",
       "failedToLoadTools": "加载失败",
       "noToolsAvailable": "没有可用工具",
+      "noToolsFound": "未找到工具",
       "noToolsDescription": "此集成没有可配置的工具",
+      "tryAdjustingSearch": "尝试调整搜索条件",
+      "toolsAppearHere": "工具将在可用时显示在此处",
       "addingTools": "添加工具中...",
       "addTool": "添加{{count}}个工具",
       "addTools": "添加{{count}}个工具",
