feat: memory system

--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -188,6 +188,41 @@
     "integrations": {
       "opening": "Abrindo Integrações",
       "redirecting": "Redirecionando para a página de Integrações..."
+    },
+    "memory": {
+      "title": "Memória de IA",
+      "description": "Lembre automaticamente o contexto entre as conversas",
+      "enabled": "Ativada",
+      "disabled": "Desativada",
+      "notAvailable": "A memória não está disponível no seu plano atual. Atualize para Plus ou superior para ativar a memória automática.",
+      "usage": "Uso da Memória",
+      "available": "{count} memórias disponíveis",
+      "noLimit": "Ilimitado",
+      "yourMemories": "Suas Memórias",
+      "yourMemoriesDescription": "Veja e gerencie o que a IA se lembra sobre você",
+      "clearAll": "Limpar Tudo",
+      "deleteAllTitle": "Excluir todas as memórias?",
+      "deleteAllDescription": "Isso excluirá permanentemente todas as {count} memórias. A IA não se lembrará mais de informações de conversas anteriores. Esta ação não pode ser desfeita.",
+      "deleteAllButton": "Excluir Todas as Memórias",
+      "noMemoriesYet": "Ainda não há memórias",
+      "noMemoriesDescription": "Inicie uma conversa e a IA lembrará automaticamente informações importantes sobre você",
+      "searchMemories": "Pesquisar memórias...",
+      "filterByType": "Filtrar por tipo",
+      "allTypes": "Todos os Tipos",
+      "personalFacts": "Fatos Pessoais",
+      "preferences": "Preferências",
+      "context": "Contexto",
+      "conversations": "Conversas",
+      "noMatchingMemories": "Nenhuma memória correspondente",
+      "adjustFilters": "Tente ajustar seus filtros ou consulta de pesquisa",
+      "loadMore": "Carregar Mais",
+      "loading": "Carregando memórias...",
+      "memoryTypes": {
+        "fact": "Fato",
+        "preference": "Preferência",
+        "context": "Contexto",
+        "conversation_summary": "Conversa"
+      }
     }
   },
   "triggers": {
