--- a/apps/mobile/locales/fr.json
+++ b/apps/mobile/locales/fr.json
@@ -123,9 +123,43 @@
     }
   },
   "onboarding": {
+    "welcome": "Découvrez ce que Kortix peut faire",
+    "welcomeSubtitle": "Votre assistant IA qui passe à l'action",
     "skip": "Passer",
     "next": "Suivant",
     "getStarted": "Commencer",
+    "kortixComputer": "Kortix Computer",
+    "ready": "Prêt",
+    "examples": {
+      "presentations": {
+        "title": "Présentations",
+        "description": "Découvrez comment il crée des présentations incroyables",
+        "userMessage": "Recherche et crée une présentation sur les réseaux de neurones",
+        "aiMessage": "Je vais rechercher les réseaux de neurones et créer une présentation pour vous...",
+        "researching": "Recherche en cours",
+        "creatingFile": "Création du fichier",
+        "creatingSlides": "Création des diapositives"
+      },
+      "dataAnalysis": {
+        "title": "Analyse de données",
+        "description": "Regardez-le analyser les données et créer des rapports visuels",
+        "userMessage": "Analyse les performances des ventes Q4 depuis Google Drive",
+        "aiMessage": "Je vais charger vos données de ventes et créer une analyse complète...",
+        "loadingFromDrive": "Chargement depuis Google Drive",
+        "creatingVisualization": "Création de la visualisation",
+        "researchingMarket": "Recherche du marché",
+        "creatingReport": "Création du rapport"
+      },
+      "image": {
+        "title": "Image",
+        "description": "Découvrez la conception de logos et de marques par IA",
+        "userMessage": "Crée un logo pour notre entreprise",
+        "aiMessage": "Je vois que vous avez mentionné LUXY. Je vais créer un logo professionnel pour votre marque...",
+        "researchingBrand": "Recherche de la marque",
+        "creatingLogo": "Création du logo",
+        "creatingBrandBoard": "Création du tableau de marque"
+      }
+    },
     "slide1": {
       "title": "Chat avec IA",
       "description": "Aie des conversations naturelles avec des assistants IA puissants qui comprennent le contexte et fournissent des réponses utiles"
