--- a/apps/mobile/locales/ja.json
+++ b/apps/mobile/locales/ja.json
@@ -118,9 +118,43 @@
     }
   },
   "onboarding": {
+    "welcome": "Kortixができることを見る",
+    "welcomeSubtitle": "行動するAIアシスタント",
     "skip": "スキップ",
     "next": "次へ",
     "getStarted": "始める",
+    "kortixComputer": "Kortix Computer",
+    "ready": "準備完了",
+    "examples": {
+      "presentations": {
+        "title": "プレゼンテーション",
+        "description": "素晴らしいプレゼンテーションを作成する様子をご覧ください",
+        "userMessage": "ニューラルネットワークについて調査してプレゼンテーションを作成",
+        "aiMessage": "ニューラルネットワークを調査して、プレゼンテーションを作成します...",
+        "researching": "調査中",
+        "creatingFile": "ファイル作成中",
+        "creatingSlides": "スライド作成中"
+      },
+      "dataAnalysis": {
+        "title": "データ分析",
+        "description": "データを分析してビジュアルレポートを作成する様子をご覧ください",
+        "userMessage": "Google DriveからQ4の売上パフォーマンスを分析",
+        "aiMessage": "売上データを読み込み、包括的な分析を作成します...",
+        "loadingFromDrive": "Google Driveから読み込み中",
+        "creatingVisualization": "ビジュアライゼーション作成中",
+        "researchingMarket": "市場調査中",
+        "creatingReport": "レポート作成中"
+      },
+      "image": {
+        "title": "画像",
+        "description": "AI搭載のロゴとブランドデザインを体験",
+        "userMessage": "会社のロゴを作成",
+        "aiMessage": "LUXYについて以前言及されましたね。あなたのブランドのプロフェッショナルなロゴを作成します...",
+        "researchingBrand": "ブランド調査中",
+        "creatingLogo": "ロゴ作成中",
+        "creatingBrandBoard": "ブランドボード作成中"
+      }
+    },
     "slide1": {
       "title": "AIとチャット",
       "description": "文脈を理解し、役立つ回答を提供する強力なAIアシスタントと自然な会話をしよう"
