--- a/apps/mobile/locales/es.json
+++ b/apps/mobile/locales/es.json
@@ -158,6 +158,13 @@
         "researchingBrand": "Investigando marca",
         "creatingLogo": "Creando logo",
         "creatingBrandBoard": "Creando tablero de marca"
+      },
+      "imageEasterEgg": {
+        "title": "Imagen",
+        "description": "Transforma tus fotos con estilos de IA",
+        "userMessage": "Convierte mi imagen a estilo pixel art blocky",
+        "aiMessage": "¡Claro! Transformaré tu imagen en un look estilizado blocky...",
+        "creatingImage": "Creando imagen estilizada"
       }
     },
     "slide1": {
