--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -728,7 +728,13 @@
     "didntReceiveEmail": "Não recebeste o e-mail?",
     "resend": "Reenviar",
     "alreadySignedIn": "Já tens sessão iniciada. Nenhuma ação necessária.",
-    "goToDashboard": "Ir para o Painel"
+    "goToDashboard": "Ir para o Painel",
+    "signInToContinue": "Entra para continuar",
+    "signInOrCreateAccountToTalk": "Entra ou cria uma conta para falar com o Kortix",
+    "orContinueWithEmail": "ou continua com email",
+    "signInWithEmail": "Entrar com email",
+    "createNewAccount": "Criar nova conta",
+    "byContinuingYouAgreeSimple": "Ao continuar, concordas com a nossa"
   },
   "onboarding": {
     "welcome": "Bem-vindo",
